hope this fixed the overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     scroll-behavior: smooth;
     background-color: white;
+    overflow-x: hidden;
 }
 
 a {
